--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -58,6 +58,7 @@
     --leading-66:                   4.125rem;
     --leading-96:                   6rem;
     --leading-104:                  6.5rem;
+    --leading-110:                  6.875rem;
 
 
     --tracking-1: 0.0625rem; /* 1px */
