--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -6,9 +6,14 @@ import Flag from "@components/partials/Flag.astro";
 
 <section class="cv module" aria-labelledby="cv-title" id="lebenslauf" role="region">
     <div class="grid">
-        <div class="col-span-full">
+        <div class="col-span-6 lg:col-span-4 lg:col-start-5 text-center mb-110">
             <Flag>Verlauf</Flag>
-            <h2 data-scroll-reveal id="cv-title" class="mb-90">Lebenslauf</h2>
+            <h2 data-scroll-reveal id="cv-title" class="mb-35">Lebenslauf</h2>
+            <p class="text-balance">
+                Technisches Know-how mit einem Auge fürs Detail
+            </p>
+        </div>
+        <div class="col-span-full">
             <div data-cv class="relative pb-10 pt-30">
                 <div class="absolute top-0 left-25 w-1 h-1/1 bg-white lg:left-1/2 lg:-translate-x-1/2"></div>
                 <div class="sticky top-300 w-48 ml-1 -translate-y-80 lg:block lg:ml-[50%] lg:-translate-x-1/2 lg:w-70">
