--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -50,7 +50,7 @@ const swiperSettings = {
 const swiperSettingsJSON = JSON.stringify(swiperSettings);
 ---
 
-<div class="module services" id="services" aria-labelledby="services-title" role="region" data-services>
+<section class="module services" id="services" aria-labelledby="services-title" role="region" data-services>
     <div class="grid">
         <div class="col-span-5 lg:col-span-5">
             <Flag>Services</Flag>
@@ -161,7 +161,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
         </li>
 
     </ol>
-</div>
+</section>
 
 <script>
     import { lazyLoadWhenIdle } from '@scripts/utils/lazy-load-when-idle';
