--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -6,9 +6,9 @@ import Flag from "@components/partials/Flag.astro";
 
 <section class="cv module" aria-labelledby="cv-title" id="lebenslauf" role="region">
     <div class="grid">
-        <div class="col-span-6 lg:col-span-4 lg:col-start-5 text-center mb-110">
-            <Flag>Verlauf</Flag>
-            <h2 data-scroll-reveal id="cv-title" class="mb-35">Lebenslauf</h2>
+        <div class="col-span-6 lg:col-span-6 lg:col-start-4 text-center mb-110">
+            <Flag>Lebenslauf</Flag>
+            <h2 data-scroll-reveal id="cv-title" class="mb-20">Frontend Architect & Senior Developer</h2>
             <p class="text-balance">
                 Technisches Know-how mit einem Auge fürs Detail
             </p>
