--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -3,37 +3,35 @@ import Button from "@components/partials/Button.astro";
 import Flag from "@components/partials/Flag.astro";
 import IconInstagram from "@components/icons/IconInstagram.astro";
 ---
-<footer class="site-footer pb-120" id="kontakt">
+<footer data-scroll-reveal class="site-footer pb-120" id="kontakt">
     <div class="grid relative lg:items-between">
         <div class="col-span-6 lg:col-span-4 lg:row-span-2">
-            <div data-scroll-reveal class="h2 text-112 leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
+            <div class="h2 text-112 leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
                 Hast du ein Projekt im Sinn?
             </div>
         </div>
         <div class="col-span-6 lg:col-span-4 lg:col-start-6 pt-9">
             <Flag>Kontakt</Flag>
-            <p data-scroll-reveal>
+            <p>
                 Ich freue mich immer, mein Netzwerk zu erweitern – für spannende Projekte, einen lockeren Austausch oder Empfehlungen.
             </p>
-            <a data-scroll-reveal href={import.meta.env.PUBLIC_INSTAGRAM_LINK} target="_blank" class="flex items-center mt-10 mb-20 no-underline" title="Zu Instagram">
+            <a  href={import.meta.env.PUBLIC_INSTAGRAM_LINK} target="_blank" class="flex items-center mt-10 mb-20 no-underline" title="Zu Instagram">
                 <IconInstagram className="w-35 h-35" /> <span class="inline-block ml-10">Instagram</span>
             </a>
-            <div data-scroll-reveal>
-                <Button className="mt-18 lg:mt-28" href=`mailto:${import.meta.env.PUBLIC_CONTACT_EMAIL}` icon="send">Anschreiben</Button>
-            </div>
+            <Button className="mt-18 lg:mt-28" href=`mailto:${import.meta.env.PUBLIC_CONTACT_EMAIL}` icon="send">Anschreiben</Button>
         </div>
         <div class="flex items-end col-span-6 lg:col-span-7 lg:col-start-6">
             <nav class="w-1/2 lg:text-left">
                 <ul class="flex justify-center lg:justify-start pb-5">
-                    <li data-scroll-reveal class="mx-20 lg:ml-0">
+                    <li  class="mx-20 lg:ml-0">
                         <a class="inline-block text-18 leading-38" href="/impressum">Impressum</a>
                     </li>
-                    <li data-scroll-reveal class="mx-20 lg:mx-0">
+                    <li  class="mx-20 lg:mx-0">
                         <a class="inline-block text-18 leading-38" href="/datenschutz">Datenschutzrichtlinien</a>
                     </li>
                 </ul>
             </nav>
-            <p data-scroll-reveal class="absolute top-320 right-47 origin-bottom-right rotate-90 text-18">
+            <p class="absolute top-320 right-47 origin-bottom-right rotate-90 text-18">
                 © {new Date().getFullYear()} Marvin Schmidt Codes
             </p>
         </div>
