--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -53,7 +53,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
 <section class="module services" id="services" aria-labelledby="services-title" role="region" data-services>
     <div class="grid">
         <div class="col-span-5 lg:col-span-5">
-            <Flag>Services</Flag>
+            <Flag>Leistungen</Flag>
             <Swiper className="!pt-80" swiperSettings={swiperSettingsJSON}>
                 <div class="swiper-slide">
                     <div>
