--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -56,6 +56,8 @@
     --leading-50:                   3.125rem;
     --leading-56:                   3.5rem;
     --leading-66:                   4.125rem;
+    --leading-72:                   4.5rem;
+    --leading-80:                   5rem;
     --leading-96:                   6rem;
     --leading-104:                  6.5rem;
     --leading-110:                  6.875rem;
