--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -5,8 +5,8 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
 ---
 <footer data-scroll-reveal class="site-footer pb-120" id="kontakt">
     <div class="grid relative lg:items-between">
-        <div class="col-span-6 lg:col-span-4 lg:row-span-2">
-            <div class="h2 text-112 leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
+        <div class="col-span-6 mb-30 lg:mb-0 lg:col-span-4 lg:row-span-2">
+            <div class="h2 text-64 leading-66 lg:text-112 lg:leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
                 Hast du ein Projekt im Sinn?
             </div>
         </div>
@@ -20,18 +20,18 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
             </a>
             <Button className="mt-18 lg:mt-28" href=`mailto:${import.meta.env.PUBLIC_CONTACT_EMAIL}` icon="send">Anschreiben</Button>
         </div>
-        <div class="flex items-end col-span-6 lg:col-span-7 lg:col-start-6">
-            <nav class="w-1/2 lg:text-left">
-                <ul class="flex justify-center lg:justify-start pb-5">
-                    <li  class="mx-20 lg:ml-0">
+        <div class="mt-50 lg:mt-0 lg:flex lg:items-end col-span-6 lg:col-span-7 lg:col-start-6">
+            <nav class="lg:w-1/2 text-left">
+                <ul class="flex lg:justify-start pb-5">
+                    <li  class="mr-20 lg:mx-20 lg:ml-0">
                         <a class="inline-block text-18 leading-38" href="/impressum">Impressum</a>
                     </li>
-                    <li  class="mx-20 lg:mx-0">
+                    <li  class="lg:mx-20 lg:mx-0">
                         <a class="inline-block text-18 leading-38" href="/datenschutz">Datenschutzrichtlinien</a>
                     </li>
                 </ul>
             </nav>
-            <p class="absolute top-320 right-47 origin-bottom-right rotate-90 text-18">
+            <p class="lg:absolute lg:top-320 lg:right-47 lg:origin-bottom-right lg:rotate-90 lg:text-18">
                 © {new Date().getFullYear()} Marvin Schmidt Codes
             </p>
         </div>
