--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -8,7 +8,8 @@ import Flag from "@components/partials/Flag.astro";
     <div class="grid lg:items-center">
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div data-image-tilt-effect class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
-                <Image
+                <div data-parallax>
+                    <Image
                         src="/images/marvin_schmidt_profile.jpg"
                         width="333"
                         height="533"
@@ -34,7 +35,8 @@ import Flag from "@components/partials/Flag.astro";
                         className="scale-105"
                         fetchPriority="high"
                         alt="Portrait von Marvin Schmidt, Frontend Architect."
-                />
+                    />
+                </div>
             </div>
         </figure>
         <div class="col-span-5 mt-30 lg:col-start-7 lg:mt-0">
