--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -7,7 +7,7 @@ import Flag from "@components/partials/Flag.astro";
 <section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" role="region">
     <div class="grid lg:items-center">
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
-            <div data-image-tilt-effect class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
+            <div class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
                 <div data-parallax>
                     <Image
                         src="/images/marvin_schmidt_profile.jpg"
