--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -2,6 +2,8 @@
 import Button from "@components/partials/Button.astro";
 import Flag from "@components/partials/Flag.astro";
 import IconInstagram from "@components/icons/IconInstagram.astro";
+import Input from "@components/partials/Input.astro";
+import Textarea from "@components/partials/Textarea.astro";
 ---
 <footer data-scroll-reveal class="site-footer pb-120" id="kontakt">
     <div class="grid relative lg:items-between">
@@ -15,12 +17,14 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
             <p>
                 Ich freue mich immer, mein Netzwerk zu erweitern – für spannende Projekte, einen lockeren Austausch oder Empfehlungen.
             </p>
-            <a  href={import.meta.env.PUBLIC_INSTAGRAM_LINK} target="_blank" class="flex items-center mt-10 mb-20 no-underline" title="Zu Instagram">
-                <IconInstagram className="w-35 h-35" /> <span class="inline-block ml-10">Instagram</span>
-            </a>
-            <Button className="mt-18 lg:mt-28" href=`mailto:${import.meta.env.PUBLIC_CONTACT_EMAIL}` icon="send">Anschreiben</Button>
+            <form name="contact" method="POST" data-form-validation netlify class="form-validation">
+
+                <Input type="email" name="email" required={true} label="E-Mail-Adresse:" errorMessage="Pflichtfeld" />
+                <Textarea name="message" required={true} label="Nachricht:" errorMessage="Deine Nachricht ist zu kurz" />
+                <Button className="mt-28 lg:mt-28" icon="send" type="submit">Abschicken</Button>
+            </form>
         </div>
-        <div class="mt-50 lg:mt-0 lg:flex lg:items-end col-span-6 lg:col-span-7 lg:col-start-6">
+        <div class="mt-70 lg:flex lg:items-end col-span-6 lg:col-span-7 lg:col-start-6">
             <nav class="lg:w-1/2 text-left">
                 <ul class="flex lg:justify-start pb-5">
                     <li  class="mr-20 lg:mx-20 lg:ml-0">
@@ -38,3 +42,14 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
 
     </div>
 </footer>
+
+<script>
+    const $formValidations = document.querySelectorAll('*[data-form-validation]');
+
+    if($formValidations?.length > 0){
+        import('@scripts/utils/form-validation').then((module) => {
+            const { formValidation } = module;
+            formValidation.init();
+        });
+    }
+</script>
