--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -4,7 +4,7 @@ import Button from "@components/partials/Button.astro";
 import Flag from "@components/partials/Flag.astro";
 ---
 
-<section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" role="region">
+<section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" data-hero-intro role="region">
     <div class="grid lg:items-center">
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
@@ -50,7 +50,15 @@ import Flag from "@components/partials/Flag.astro";
                 entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen –
                 <em>minimalistisch gedacht</em>, <em>detailverliebt umgesetzt</em>, vom Design bis zur fertigen Website.
             </p>
-            <Button className="mt-18 lg:mt-28" href=`mailto:${import.meta.env.PUBLIC_CONTACT_EMAIL}` icon="send" data-scroll-reveal>Anschreiben</Button>
+            <Button href="#kontakt" className="mt-18 lg:mt-28" icon="send" data-scroll-reveal>Anschreiben</Button>
         </div>
     </div>
 </section>
+
+<script>
+    import { lazyLoadWhenIdle } from '@scripts/utils/lazy-load-when-idle';
+    lazyLoadWhenIdle(() => import('@scripts/modules/hero-intro.js'), {
+        selector: '*[data-hero-intro]',
+        onLoad: ({ heroIntro }) => heroIntro?.init?.()
+    });
+</script>
