--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,8 @@ import SiteFooter from "@components/base/SiteFooter.astro";
 import SiteGridLines from "@components/base/SiteGridLines.astro";
 
 const {
-    title
+    title,
+    noindex = false
 } = Astro.props;
 
 const currentPageUrl = Astro.url;
@@ -15,6 +16,9 @@ const currentPageUrl = Astro.url;
 <html lang="de" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
+        {noindex &&
+            <meta name="robots" content="noindex, nofollow">
+        }
 		<meta name="description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
         <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover">
 		<meta name="generator" content={Astro.generator}>
