--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -12,22 +12,18 @@ import Layout from '@layouts/Layout.astro';
                 </h2>
                 <p class="my-35">
                     Marvin Schmidt <br>
-                    Musterstraße 12 <br>
-                    12345 Musterstadt
+                    Marbacher Straße 6 <br>
+                    40597 Düsseldorf
                 </p>
                 <p class="my-35">
                     <strong>Kontakt</strong><br>
-                    E-Mail: marvin.schmidt@example.com
-                </p>
-                <p class="my-35">
-                    <strong>Umsatzsteuer-ID</strong><br>
-                    Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE123456789
+                    E-Mail: ms.qed.commerce@gmail.com
                 </p>
                 <p class="my-35">
                     <strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
                     Marvin Schmidt<br>
-                    Musterstraße 12 <br>
-                    12345 Musterstadt
+                    Marbacher Straße 6 <br>
+                    40597 Düsseldorf
                 </p>
                 <hr class="my-35">
                 <h2 class="h4 my-35">Haftungsausschluss (Disclaimer)</h2>
