--- a/src/components/partials/Button.astro
+++ b/src/components/partials/Button.astro
@@ -29,6 +29,12 @@ if(icon === 'send'){
         </g>
     </svg>
     `;
+} else if(icon === 'home'){
+    iconSVG = `
+    <svg class="mr-10" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 432 384">
+        <path fill="currentColor" d="M171 363H64V192H0L213 0l214 192h-64v171H256V235h-85v128z"/>
+    </svg>
+    `;
 }
 ---
 {href &&
