updated privacy policy

--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -12,7 +12,7 @@ import Layout from '@layouts/Layout.astro';
                 <p class="my-35">
                     Marvin Schmidt <br>
                     E-Mail: ms.qed.commcerce@gmail.com <br>
-                    Website: <a href="https://marvin-schmidt-codes.netlify.app/" target="_blank">marvin-schmidt-codes.netlify.app</a>
+                    Website: <a href="https://marvin-schmidt-codes.website/" target="_blank">https://marvin-schmidt-codes.website/</a>
                 </p>
 
                 <h2 class="h4 my-35">2. Allgemeines zur Datenverarbeitung</h2>
