--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -41,17 +41,20 @@ import Flag from "@components/partials/Flag.astro";
                         <Fragment slot="year">2019 - heute</Fragment>
                         <Fragment slot="title">Frontend-Entwickler</Fragment>
                         <p>
-                            <a href="www.active-value.de" data-astro-prefetch="false">
+                            <a href="https://www.active-value.de/" target="_blank" rel="noopener" data-astro-prefetch="false">
                                 active value GmbH Düsseldorf
                             </a>
                         </p>
                     </CVEntry>
                     <CVEntry alignment="right">
-                        <Fragment slot="year">2019</Fragment>
+                        <Fragment slot="year">2016 - 2019</Fragment>
                         <Fragment slot="title">Ausbildung zum Mediengestalter</Fragment>
                         <p>
                             Digital & Print - <br>Gestaltung und Technik <br>
-                            Albrecht-Dürer-Berufskolleg Düsseldorf
+                            Albrecht-Dürer-Berufskolleg Düsseldorf <br>
+                            <a href="https://www.active-value.de/" target="_blank" rel="noopener" data-astro-prefetch="false">
+                                active value GmbH Düsseldorf
+                            </a>
                         </p>
                     </CVEntry>
                     <CVEntry alignment="left">
