added favicon formats

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,8 @@ const currentPageUrl = Astro.url;
         <link rel="preload" href="/fonts/fonts.css" as="style">
         <link rel="stylesheet" href="/fonts/fonts.css">
 
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48">
         <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
 		<title>{title}</title>
