updated ld json

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,7 +71,11 @@ const currentPageUrl = Astro.url;
                 "@context": "https://schema.org",
                 "@type": "Person",
                 "name": "Marvin Schmidt",
-                "jobTitle": "Senior Frontend Developer",
+                "jobTitle": [
+                    "Frontend Architect",
+                    "Senior Frontend Developer"
+                ],
+                "description": "Frontend Architect mit Fokus auf Performance, Accessibility und sauberen Code. Unterstützung von Strategie über Design und Entwicklung bis SEO-Optimierung und langfristiger Betreuung.",
                 "url": "https://marvin-schmidt-codes.website",
                 "image": "https://marvin-schmidt-codes.website/share-image.png",
                 "sameAs": [
