--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ const currentPageUrl = Astro.url;
         }
         </style>
 
-        <script type="application/ld+json">
+        <script type="application/ld+json" is:inline>
             {
                 "@context": "https://schema.org",
                 "@type": "Person",
