updated page titles

--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/Layout.astro';
 ---
 
-<Layout title="Marvin Schmidt Codes - Impressum">
+<Layout title="Marvin Schmidt - Impressum">
     <div class="content-text">
         <div class="grid">
             <div class="col-span-12 lg:col-span-8 lg:col-start-2">
