--- a/src/pages/nachricht-verschickt.astro
+++ b/src/pages/nachricht-verschickt.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/Layout.astro';
 import Button from "@components/partials/Button.astro";
 ---
 
-<Layout title="Marvin Schmidt Codes - Impressum" noindex={true}>
+<Layout title="Marvin Schmidt - Nachricht verschickt" noindex={true}>
     <div class="content-text">
         <div class="grid">
             <div class="col-span-12 lg:col-span-8 lg:col-start-2">
