--- a/src/components/modules/ShortFacts.astro
+++ b/src/components/modules/ShortFacts.astro
@@ -3,10 +3,10 @@ import Flag from "@components/partials/Flag.astro";
 ---
 <div class="short-facts module lg:my-300" id="short-facts">
     <div class="grid">
-        <p class="relative col-span-6 lg:col-span-12 text-center text-36 leading-40 lg:text-59 lg:leading-80">
-            <span data-scroll-reveal class="block mb-30 lg:mb-50">Seit <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent lg:text-64"><span data-count-up-number="9" class="inline-block w-23 lg:w-41">9</span> <span data-typing-effect class="inline-block text-left w-126 lg:w-223">Jahren</span></strong> im Frontend-Development.</span>
-            <span data-scroll-reveal class="block mb-30 lg:mb-50">Über <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent lg:text-64"><span data-count-up-number="65" class="inline-block w-46 lg:w-76">65</span> <span data-typing-effect class="inline-block text-left w-298 lg:w-530">Design-Systeme</span></strong> umgesetzt.</span>
-            <span data-scroll-reveal>Mehr als <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent lg:text-64"><span data-count-up-number="800000" class="inline-block w-144 lg:w-255">800.000</span> <span data-typing-effect class="inline-block text-left w-212 lg:w-377">Zeilen Code</span></strong> geschrieben.</span>
+        <p class="relative col-span-6 lg:col-span-12 text-center text-36 leading-48 lg:text-59 lg:leading-80">
+            <span data-scroll-reveal class="block mb-30 lg:mb-50">Seit <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent whitespace-nowrap lg:text-64"><span data-count-up-number="9" class="inline-block w-23 lg:w-41">9</span> <span data-typing-effect class="inline-block text-left w-126 lg:w-223">Jahren</span></strong> im Frontend-Development.</span>
+            <span data-scroll-reveal class="block mb-30 lg:mb-50">Über <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent whitespace-nowrap lg:text-64"><span data-count-up-number="65" class="inline-block w-46 lg:w-76">65</span> <span data-typing-effect class="inline-block text-left w-298 lg:w-530">Design-Systeme</span></strong> umgesetzt.</span>
+            <span data-scroll-reveal>Mehr als <strong data-image-tilt-effect class="inline-block bg-gradient-to-r from-green to-red bg-clip-text text-transparent whitespace-nowrap lg:text-64"><span data-count-up-number="800000" class="inline-block w-144 lg:w-255">800.000</span> <span data-typing-effect class="inline-block text-left w-212 lg:w-377">Zeilen Code</span></strong> geschrieben.</span>
         </p>
     </div>
 </div>
