--- a/src/components/modules/Skills.astro
+++ b/src/components/modules/Skills.astro
@@ -9,7 +9,7 @@ import IconHTML from "@components/icons/IconHTML.astro";
     <div class="grid items-start">
         <div class="col-span-6 lg:col-span-5">
             <Flag>Kompetenzen</Flag>
-            <h2 data-scroll-reveal id="skills-title" class="col-span-full lg:flex lg:flex-wrap mb-20 lg:mb-0">Mehr als Wissen – echte Fähigkeiten</h2>
+            <h2 data-scroll-reveal id="skills-title" class="col-span-full lg:flex lg:flex-wrap mb-20 lg:mb-0">Neugier statt Routine</h2>
         </div>
         <div data-scroll-reveal class="col-span-6 lg:col-span-5 lg:col-start-7">
             <p class="text-balance lg:mt-42">
