--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -8,7 +8,7 @@ import Flag from "@components/partials/Flag.astro";
     <div class="grid lg:items-center">
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
-                <div data-parallax>
+                <div>
                     <Image
                         src="/images/marvin_schmidt_profile.jpg"
                         width="333"
