--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -12,7 +12,8 @@ import Layout from '@layouts/Layout.astro';
                 </h2>
                 <p class="my-35">
                     Marvin Schmidt <br>
-                    Marbacher Straße 6 <br>
+                    QED Commerce <br>
+                    Marbacher Straße 6<br>
                     40597 Düsseldorf
                 </p>
                 <p class="my-35">
