--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -5,7 +5,7 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
 import Input from "@components/partials/Input.astro";
 import Textarea from "@components/partials/Textarea.astro";
 
-const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 7);
+const version = import.meta.env.PUBLIC_APP_VERSION;
 ---
 <footer data-scroll-reveal class="site-footer pb-120" id="kontakt">
     <div class="grid relative lg:items-between">
@@ -37,7 +37,7 @@ const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 7);
                 </ul>
             </nav>
             <p class="lg:absolute lg:top-320 lg:right-47 lg:origin-bottom-right lg:rotate-90 lg:text-18">
-                © {new Date().getFullYear()} Marvin Schmidt Codes | Version: {version}
+                © {new Date().getFullYear()} Marvin Schmidt Codes | v{version}
             </p>
         </div>
 
