added quellcode text

--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -37,7 +37,7 @@ const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 3);
                 </ul>
             </nav>
             <p class="lg:absolute lg:top-320 lg:right-47 lg:origin-bottom-right lg:rotate-90 lg:text-18">
-                © {new Date().getFullYear()} Marvin Schmidt Codes | v1.{version}
+                © {new Date().getFullYear()} Marvin Schmidt Codes
             </p>
         </div>
 
