updated button style

--- a/src/components/partials/Button.astro
+++ b/src/components/partials/Button.astro
@@ -8,7 +8,7 @@ const {
     ...props
 } = Astro.props;
 
-const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-50 bg-black cursor-pointer border-white border-1 [border-image:linear-gradient(to_left,#D24436,#A8E6CF)_1] text-center text-white text-16 leading-28 font-medium tracking-2 duration-200 ease-out will-change-transform z-3 ${className}`;
+const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-50 bg-black cursor-pointer border-white border-1 border-l-10 [border-image:linear-gradient(to_left,#D24436,#A8E6CF)_1] text-center text-white text-16 leading-28 font-medium tracking-2 duration-200 ease-out will-change-transform z-3 ${className}`;
 let iconSVG = '';
 
 if(icon === 'send'){
