updated image alt tag

--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -34,7 +34,7 @@ import Flag from "@components/partials/Flag.astro";
                         loading="eager"
                         className="scale-105"
                         fetchPriority="high"
-                        alt="Portrait von Marvin Schmidt, Frontend Architect."
+                        alt="Portrait von Marvin Schmidt, Senior Frontend Developer und Frontend Architect."
                     />
                 </div>
             </div>
