--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -47,8 +47,8 @@ import Flag from "@components/partials/Flag.astro";
             </h1>
             <p class="mt-9 lg:mt-30" data-scroll-reveal>
                 Mit Fokus auf <strong>Performance</strong>, <strong>Accessibility</strong> und <strong>sauberen Code</strong>
-                entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen –
-                <em>minimalistisch gedacht</em>, <em>detailverliebt umgesetzt</em>, vom Design bis zur fertigen Website.
+                entwickle ich moderne Web-Erlebnisse –
+                <em>minimalistisch gedacht</em>, <em>detailverliebt umgesetzt</em>.
             </p>
             <Button href="#kontakt" className="mt-18 lg:mt-28" icon="send" data-scroll-reveal>Anschreiben</Button>
         </div>
